fixed column layout on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -113,6 +113,7 @@ html {
     grid-template-columns: repeat(3,1fr);
     gap: 10px;
     padding-top: 20px;
+    padding-left: 150px;
 }
 
 .image {
@@ -122,7 +123,6 @@ html {
 .image img {
     width: 100px;
     height: 100px;
-    margin-left: 150px;
 }
 
 .enlarged-img {
@@ -159,15 +159,52 @@ html {
 }
 
 .gallery1 {
-    display: flex;
-    flex-direction: column;
-    padding-top: 20px;
-
+    display: grid;
+    grid-template-columns: repeat(2, 100px);
+    gap: 20px;
+    border: solid 1px red;
+    padding-left: 100px;
 }
+
 
 .image {
-    margin-top: 5px;
+    padding-top: 20px;
+    
 }
+
+.enlarged-img1 {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.8);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.enlarged-img1 .close-btn1 {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: red;
+    cursor: pointer;
+    font-size: 24px;
+}
+
+.close-btn1 {
+    font-family: sans-serif;
+}
+
+
+
+.image102 {
+    height: 50px;
+    width: 50px;
+}
+
 
 @media (max-width: 400px) {
     .gallery {
